force-app/main/default/objects/Program_Service_Config__c/Program_Service_Config__c.object-meta.xml
<CustomObject>
    <label>Program Service Config</label>
    <pluralLabel>Program Service Configs</pluralLabel>
    <nameField><label>Config Name</label><type>AutoNumber</type><displayFormat>PSC-{0000}</displayFormat></nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>