force-app/main/default/objects/Program_Service_Config__c/fields/Adherence_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Adherence_Enabled__c</fullName><label>Adherence Enabled</label>
    <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>