force-app/main/default/objects/Program_Service_Config__c/fields/BV_Enabled__c.field-meta.xml
<CustomField>
    <fullName>BV_Enabled__c</fullName><label>BV Enabled</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>