force-app/main/default/objects/Program_Service_Config__c/fields/CareProgram__c.field-meta.xml
<CustomField>
    <fullName>CareProgram__c</fullName><label>Care Program</label><type>Lookup</type>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Service Configs</relationshipLabel>
    <relationshipName>Service_Configs</relationshipName>
    <required>true</required>
</CustomField>