force-app/main/default/objects/Program_Service_Config__c/fields/FA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FA_Enabled__c</fullName><label>FA Enabled</label>
    <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>