force-app/main/default/objects/Program_Service_Config__c/fields/Nursing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Enabled__c</fullName><label>Nursing Enabled</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>