force-app/main/default/objects/Program_Service_Config__c/fields/PA_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PA_Enabled__c</fullName><label>PA Enabled</label><type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>