force-app/main/default/objects/Program_Service_Config__c/fields/Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Portal_Enabled__c</fullName><label>Portal Enabled</label>
    <type>Checkbox</type><defaultValue>false</defaultValue>
</CustomField>